# apertium-cak

./: Makefile  Makefile.am  README  README.md  apertium-cak.cak.lexc  apertium-cak.cak.rlx  apertium-cak.cak.spellrelax  apertium-cak.cak.twol  apertium-cak.cak.udx  apertium-cak.pc.in  configure.ac  modes.xml
corpora/: MANIFEST  grammar.dep  grammar.tsv  henderson.dep  henderson.seg
corpora/puupankki/: puupankki.cak.conllu
dev/: countstems.sh
test/: gramatica-gen-generator-expected.txt  gramatica-gen-generator-gold.txt  gramatica-gen-input.txt  gramatica-gen-morph-expected.txt  gramatica-input.txt  gramatica-morph-expected.txt  gramatica-morph-gold.txt  manual-gen-generator-expected.txt  manual-gen-generator-gold.txt  manual-gen-input.txt  manual-input.txt  manual-morph-expected.txt  manual-morph-gold.txt  tests.json
tests/: gramatica.tsv  manual.tsv
texts/: MANIFEST  grammar.tsv  grammar.vislcg.txt
texts/puupankki/: puupankki.cak.conllu
